Can now safely update trees that contain embedded images.
git-svn-id: https://svn.java.net/svn/svgsalamander~svn/trunk@114 7dc7fa77-23fb-e6ad-8e2e-c86bd48ed22b