@@ -254,7 +254,16 @@ public class ImageSVG extends RenderableElement
             if (getPres(sty.setName("xlink:href")))
             {
                 URI src = sty.getURIValue(getXMLBase());
-                URL newVal = src.toURL();
+
+                URL newVal;
+                if ("data".equals(src.getScheme()))
+                {
+                    newVal = new URL(null, src.toASCIIString(), new Handler());
+                }
+                else
+                {
+                    newVal = src.toURL();
+                }
                 
                 if (!newVal.equals(imageSrc))
                 {
